--- a/src/main/resources/project_industrial.mixins.json
+++ b/src/main/resources/project_industrial.mixins.json
@@ -8,6 +8,7 @@
     "BlocksMixin",
     "FireworkFadeMixin",
     "FireworkMixin",
+    "FireworkRocketEntityMixin",
     "FireworkStarItemMixin",
     "OxidizableMixin"
   ],
